Operation: GetOpenshiftProjects, GetOpenshiftProjectFromId, CreateOpenshiftProject + Refactor: Add services and models layers
