# api/openapi-v1.yaml
@@ -133,9 +133,21 @@ components:
       allOf:
       - $ref: '#/components/schemas/OpenshiftProject'
       - type: object
+        required:
+          - idLab
         properties:
           idLab:
             type: string
+    OpenshiftProjectWithMeta:
+      allOf:
+      - $ref: '#/components/schemas/OpenshiftProjectWithLab'
+      - type: object
+        properties:
+          requester:
+            type: string
+          creationDate:
+            type: string
+            format: date-time
     AWSAccount:
       type: object
       properties:
@@ -575,7 +587,7 @@ paths:
               schema:
                 type: array
                 items: 
-                  $ref: '#/components/schemas/OpenshiftProject'
+                  $ref: '#/components/schemas/OpenshiftProjectWithMeta'
         '401':
           $ref: '#/components/responses/401Unauthorized'
         '500':
@@ -591,7 +603,7 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/OpenshiftProject'
+              $ref: '#/components/schemas/OpenshiftProjectWithLab'
       responses:
         '200':
           description: OK
@@ -621,7 +633,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/OpenshiftProject'
+                $ref: '#/components/schemas/OpenshiftProjectWithMeta'
         '404':
           description: Openshift project id does not exist
         '401':
